--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+duckdb==1.2.1
 ipywidgets==8.1.5
 jupyter==1.1.1
 jupyter-console==6.6.3
 jupyterlab_widgets==3.0.13
+numpy==2.2.4
 openaq==0.4.0
+pandas==2.2.3
+pytz==2025.2
+tzdata==2025.2
 widgetsnbextension==4.0.13
